--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
   <link rel="icon" type="image/png" href="favicon/android-chrome-192x192.png">
 
   <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/preset.css">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/preset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/jquery.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
+    <div id="splash">
+      <div id="splash_logo"><img src="img/u-cafe_maki.png" alt="" class="fadeUp"></div>
+      <!--/splash--></div>
     <!--  header -->
     <header class="head-bg-img">
       <div class="header_under_indx">
@@ -27,12 +32,12 @@
             <!-- header nav ul li -->
             <div class="nav_li">
               <ul>
-                <li><a class="hov_nav_w" href="/about">ABOUT US</a></li>
-                <li><a class="hov_nav_w" href="/news">NEWS</a></li>
-                <li><a class="hov_nav_w" href="/photo">PHOTO</a></li>
-                <li><a class="hov_nav_w" href="/shop">ONLINE SHOP</a></li>
-                <li><a class="hov_nav_w" href="/access">ACCESS</a></li>
-                <li><a class="hov_nav_w" href="/contact">CONTACT</a></li>
+                <li><a class="hov_nav_w" href="#aboutus">ABOUT US</a></li>
+                <li><a class="hov_nav_w" href="#news">NEWS</a></li>
+                <li><a class="hov_nav_w" href="photo.html">PHOTO</a></li>
+                <li><a class="hov_nav_w" href="shop.html">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_w" href="#access">ACCESS</a></li>
+                <li><a class="hov_nav_w" href="contact.html">CONTACT</a></li>
                 <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
               </ul>
             </div>
@@ -45,12 +50,12 @@
     <div class="inner">
     <!-- About Us カフェ紹介-->
     <div id="aboutus">
-      <h2 class="ta-l">About us</h2>
-      <p class="aap ta-l">私たちについて</p>
+      <div class="d-b fadeInUpTrigger"><h2 class="ta-l">About us</h2></div>
+      <p class="aap ta-l d-b fadeInUpTrigger">私たちについて</p>
       <div id="aboutus_a">
         <div id="aboutus_img">
-          <img loading="lazy" id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
-          <img loading="lazy" id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
+          <img class="d-ib fadeUpTrigger" id="ai-1" src="img/kari/carry1.jpg" alt="グリーンカレー">
+          <img class="d-ib fadeUpTrigger" id="ai-2" src="img/kari/cakea.jpg" alt="ティラミス">
         </div>
         <div id="aboutus_b">
           <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
@@ -79,12 +84,12 @@
       <h2>Photo</h2>
         <p class="sub_t photo_bp">旬なものを、旬なときに。</p>
         <div id="photo_b">
-          <img loading="lazy" src="img/kari/carry1.jpg" alt="">
-          <img loading="lazy" src="img/kari/toast.jpg" alt="">
-          <img loading="lazy" src="img/kari/pasta2.jpg" alt="">
-          <img loading="lazy" src="img/kari/cake2.jpg" alt="">
-          <img loading="lazy" src="img/kari/coffee.jpg" alt="">
-          <img loading="lazy" src="img/kari/maccha.jpg" alt="">
+          <img  src="img/kari/carry1.jpg" alt="">
+          <img  src="img/kari/toast.jpg" alt="">
+          <img  src="img/kari/pasta2.jpg" alt="">
+          <img  src="img/kari/cake2.jpg" alt="">
+          <img  src="img/kari/coffee.jpg" alt="">
+          <img  src="img/kari/maccha.jpg" alt="">
         </div>
         <div class="btn-4"><a href="#">VIEW MORE</a></div>
       </div>
@@ -96,7 +101,7 @@
         <h2>ONLINE SHOP</h2>
         <p class="sub_t">特別な人へ、特別な日に。</p>
           <div id="onl_p">
-            <img loading="lazy" src="img/kari/cookie.jpg" alt="クッキー">
+            <img  src="img/kari/cookie.jpg" alt="クッキー">
             <div id="onl_pp">
               <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
               <div class="btn-3"><a href="#">詳細をみる</a></div>
@@ -123,15 +128,15 @@
               <li><span>・</span><a  class="hov_03"href="https://goo.gl/maps/MC3WfkHtdPCM2Z4o7" target="_blank">Googleマップ</a></li>
             </ul>
           </div>
-          <img loading="lazy" src="img/kari/cake3.jpg" alt="">
+          <img  src="img/kari/cake3.jpg" alt="">
           <div class="map_a d-f jc-c">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="800" height="530" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.3572083407203!2d130.77374501526725!3d32.835792580954234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f049e8e1dad7%3A0x185dff74559cf361!2sU-cafe!5e0!3m2!1sja!2sjp!4v1627033029345!5m2!1sja!2sjp" width="800" height="530" style="border:0;" allowfullscreen="" ></iframe>
           </div>
         </div>
       </div>
         <!-- footer -->
       <div class="main_contact">
-        <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+        <img  class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
         <p class="main_con_p">You and Me Café</p>
         <div class="main_cons d-f jc-c">
           <div class="main_con_i_1"></div>
@@ -139,14 +144,14 @@
         </div>
         <div class="clear"></div>
         <div class="btn-5">
-          <a href="#">
+          <a href="contact.html">
             <div class="con_1">
               <h3>Contact</h3>
               <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
             </div>
           </a>
         </div>
-        <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+        <a class="hov" href="/"><img  class="con_3" src="img/u-cafe_maki.png" alt=""></a>
         <div class="inner">
           <div class="con_4"></div>
         </div>
@@ -155,5 +160,6 @@
     <footer>
       <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
