--- a/photo.html
+++ b/photo.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/jquery.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <!-- headerー -->
@@ -27,12 +29,12 @@
             <!-- ヘッダーナビ 項目部分 -->
             <div class="nav_li">
               <ul>
-                <li><a class="hov_nav_b" href="/about">ABOUT US</a></li>
-                <li><a class="hov_nav_b" href="/news">NEWS</a></li>
-                <li><a class="hov_nav_b" href="/photo">PHOTO</a></li>
-                <li><a class="hov_nav_b" href="/shop">ONLINE SHOP</a></li>
-                <li><a class="hov_nav_b" href="/access">ACCESS</a></li>
-                <li><a class="hov_nav_b" href="/contact">CONTACT</a></li>
+                <li><a class="hov_nav_b" href="index.html#aboutus">ABOUT US</a></li>
+                <li><a class="hov_nav_b" href="index.html#news">NEWS</a></li>
+                <li><a class="hov_nav_b" href="photo.html">PHOTO</a></li>
+                <li><a class="hov_nav_b" href="shop.html">ONLINE SHOP</a></li>
+                <li><a class="hov_nav_b" href="index.html#access">ACCESS</a></li>
+                <li><a class="hov_nav_b" href="contact.html">CONTACT</a></li>
                 <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_May2016.png" alt="黒"><img class="insta_hov" src="img/insta_color.png" alt="カラー "></a></li>
               </ul>
             </div>
@@ -62,14 +64,14 @@
           </div>
           <div class="clear"></div>
           <div class="btn-5">
-            <a href="#">
+            <a href="contact.html">
               <div class="con_1">
                 <h3>Contact</h3>
                 <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
               </div>
             </a>
           </div>
-          <a class="hov" href="#"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+          <a class="hov" href="/"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
           <div class="inner">
             <div class="con_4"></div>
           </div>
