--- a/photo.html
+++ b/photo.html
@@ -45,40 +45,40 @@
     </header>
     <main>
       <div class="inner cen">
-        <h2>Photo</h2>
-        <p class="sub_t">オイシイ記録。</p>
+        <h2 class="fadeUpTrigger">Photo</h2>
+        <p class="sub_t fadeUpTrigger">オイシイ記録。</p>
         <div id="photo_inner" class="d-f fd-c ai-c">
-          <img loading="lazy" class="photo_t" src="img/kari/cake2.jpg" alt="">
-          <img loading="lazy" src="img/kari/maccha.jpg" alt="" class="photo_y">
+          <img loading="lazy" class="photo_t d-b fadeUpTrigger" src="img/kari/cake2.jpg" alt="">
+          <img loading="lazy" src="img/kari/maccha.jpg" alt="" class="photo_y d-b fadeUpTrigger">
         </div>
       </div>
       <!-- /.inner -->
 
         <!-- footer -->
         <div class="main_contact">
-          <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-          <p class="main_con_p">You and Me Café</p>
-          <div class="main_cons d-f jc-c">
+          <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+          <p class="main_con_p fadeUpTrigger">You and Me Café</p>
+          <div class="main_cons d-f jc-c fadeUpTrigger">
             <div class="main_con_i_1"></div>
             <div class="main_con_i_2"></div>
           </div>
-          <div class="clear"></div>
-          <div class="btn-5">
+          <div class="btn-5 fadeUpTrigger">
             <a href="contact.html">
-              <div class="con_1">
+              <div class="con_1 fadeUpTrigger">
                 <h3>Contact</h3>
                 <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
               </div>
             </a>
           </div>
-          <a class="hov" href="/"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+          <a class="hov" href="/"><img loading="lazy" class="con_3 fadeUpTrigger" src="img/u-cafe_maki.png" alt=""></a>
           <div class="inner">
-            <div class="con_4"></div>
+            <div class="con_4 fadeUpTrigger"></div>
           </div>
         </div>
       </main>
       <footer>
         <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
       </footer>
+      <script src="script.js"></script>
     </body>
   </html>
