--- a/shop.html
+++ b/shop.html
@@ -44,36 +44,36 @@
       </div>
     </header>
     <div class="inner d-f fd-c ai-c" id="shop_inner">
-      <h2>Online Shop</h2>
-      <p class="sub_t">大切な人へ。</p>
-      <p class="text_a ta-c">TOFU(豆腐)×COFFEE(コーヒー) = TOFFEE(トーフィー)<br>「早くて、カラダに良くて、おいしい。」<br>いつでも手軽に口にでき、健康的な生活について考えることができ、しかも美味しい。<br>そんなメニューを発信する「TOFFEE」の人気商品をご家庭にお届けします。</p>
+      <h2 class="fadeUpTrigger">Online Shop</h2>
+      <p class="sub_t fadeUpTrigger">大切な人へ。</p>
+      <p class="text_a ta-c fadeUpTrigger">TOFU(豆腐)×COFFEE(コーヒー) = TOFFEE(トーフィー)<br>「早くて、カラダに良くて、おいしい。」<br>いつでも手軽に口にでき、健康的な生活について考えることができ、しかも美味しい。<br>そんなメニューを発信する「TOFFEE」の人気商品をご家庭にお届けします。</p>
       <div class="shop-items">
         <!-- ↓CHEESECAKE -->
         <div class="sp-item">
-          <p class="shop-ti bdr-1">CHEESECAKE Line Up</p>
+          <p class="shop-ti bdr-1 fadeUpTrigger">CHEESECAKE Line Up</p>
 
           <div class="sp-item-d d-f jc-sb">
 
             <article class="gallery">
               <a class="hov d-b" href="#">
-                <figure>
+                <figure class="fadeUpTrigger">
                   <img loading="lazy" src="img/kari/cake3.jpg" alt="プレーンチーズケーキ">
                 </figure>
                 <div class="txt ta-c">
-                  <div class="pp">CHEESECAKE -PLANE-</div>
-                  <p class="sp-item-ti-2">U-cafe</p>
+                  <div class="pp fadeUpTrigger">CHEESECAKE -PLANE-</div>
+                  <p class="sp-item-ti-2 fadeUpTrigger">U-cafe</p>
                 </div>
               </a>
             </article>
 
             <article class="gallery">
               <a class="hov d-b" href="#">
-                <figure>
+                <figure class="fadeUpTrigger">
                   <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
                 </figure>
                 <div class="txt ta-c">
-                  <div class="pp">CHEESECAKE -MACCHA-</div>
-                  <p class="sp-item-ti-2">U-cafe</p>
+                  <div class="pp fadeUpTrigger">CHEESECAKE -MACCHA-</div>
+                  <p class="sp-item-ti-2 fadeUpTrigger">U-cafe</p>
                 </div>
               </a>
             </article>
@@ -83,17 +83,17 @@
         </div>
         <!-- Cookie -->
         <div class="sp-item">
-          <p class="shop-ti bdr-2">COOKIE - Special Days -</p>
+          <p class="shop-ti bdr-2 fadeUpTrigger">COOKIE - Special Days -</p>
 
-          <div class="sp-item-d d-f jc-sb"">
+          <div class="sp-item-d d-f jc-sb">
             <article class="gallery">
               <a class="hov d-b" href="#">
-                <figure>
+                <figure class="fadeUpTrigger">
                   <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
                 </figure>
                 <div class="txt ta-c">
-                  <div class="pp">EVENT COOKIE</div>
-                  <p class="sp-item-ti-2">U-cafe</p>
+                  <div class="pp fadeUpTrigger">EVENT COOKIE</div>
+                  <p class="sp-item-ti-2 fadeUpTrigger">U-cafe</p>
                 </div>
               </a>
             </article>
@@ -106,30 +106,30 @@
     <!-- /.inner -->
 
         <!-- footer -->
-      <div class="main_contact">
-        <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-        <p class="main_con_p">You and Me Café</p>
-        <div class="main_cons d-f jc-c">
-          <div class="main_con_i_1"></div>
-          <div class="main_con_i_2"></div>
+        <div class="main_contact">
+          <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+          <p class="main_con_p fadeUpTrigger">You and Me Café</p>
+          <div class="main_cons d-f jc-c fadeUpTrigger">
+            <div class="main_con_i_1"></div>
+            <div class="main_con_i_2"></div>
+          </div>
+          <div class="btn-5 fadeUpTrigger">
+            <a href="contact.html">
+              <div class="con_1 fadeUpTrigger">
+                <h3>Contact</h3>
+                <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+              </div>
+            </a>
+          </div>
+          <a class="hov" href="/"><img loading="lazy" class="con_3 fadeUpTrigger" src="img/u-cafe_maki.png" alt=""></a>
+          <div class="inner">
+            <div class="con_4 fadeUpTrigger"></div>
+          </div>
         </div>
-        <div class="clear"></div>
-        <div class="btn-5">
-          <a href="contact.html">
-            <div class="con_1">
-              <h3>Contact</h3>
-              <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-            </div>
-          </a>
-        </div>
-        <a class="hov" href="/"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-        <div class="inner">
-          <div class="con_4"></div>
-        </div>
-      </div>
-    <!-- </main> -->
-    <footer>
-      <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-    </footer>
-  </body>
-</html>
+      </main>
+      <footer class="fadeUpTrigger">
+        <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+      </footer>
+      <script src="script.js"></script>
+    </body>
+  </html>
