--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,15 @@
     <main>
       <div class="inner">
           <div class="con-cen ta-c">
-            <h2 class="mt_50">Contact</h2>
-            <p class="sub_t mb_60">お問い合わせ</p>
+            <h2 class="mt_50 fadeUpTrigger">Contact</h2>
+            <p class="sub_t mb_60 fadeUpTrigger">お問い合わせ</p>
           </div>
-          <div class="ta-l">
+          <div class="ta-l fadeUpTrigger">
             <p>お気軽にお問い合わせください。<br>以下のフォームに必要事項をご入力いただき、送信ボタンを押してください。<br>（<span class="c-red">＊</span>マークは必須項目です。）</p>
           </div>
           <div>
             <form id="mailform" action="#" method="POST">
-              <div class="con-phase">
+              <div class="con-phase fadeUpTrigger">
                 <table>
                   <tbody>
                     <tr>
@@ -101,7 +101,7 @@
                   </tbody>
                 </table>
               </div>
-              <div class="btn-8">
+              <div class="btn-8 fadeUpTrigger">
                 <button type="submit" class="hov mfp_element_submit mfp_element_all">入力確認画面へ進む</button>
               </div>
             </form>
@@ -111,29 +111,29 @@
 
         <!-- footer -->
         <div class="main_contact">
-          <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-          <p class="main_con_p">You and Me Café</p>
-          <div class="main_cons d-f jc-c">
+          <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+          <p class="main_con_p fadeUpTrigger">You and Me Café</p>
+          <div class="main_cons d-f jc-c fadeUpTrigger">
             <div class="main_con_i_1"></div>
             <div class="main_con_i_2"></div>
           </div>
-          <div class="clear"></div>
-          <div class="btn-5">
+          <div class="btn-5 fadeUpTrigger">
             <a href="contact.html">
-              <div class="con_1">
+              <div class="con_1 fadeUpTrigger">
                 <h3>Contact</h3>
                 <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
               </div>
             </a>
           </div>
-          <a class="hov" href="/"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+          <a class="hov" href="/"><img loading="lazy" class="con_3 fadeUpTrigger" src="img/u-cafe_maki.png" alt=""></a>
           <div class="inner">
-            <div class="con_4"></div>
+            <div class="con_4 fadeUpTrigger"></div>
           </div>
         </div>
       </main>
-      <footer>
+      <footer class="fadeUpTrigger">
         <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
       </footer>
+      <script src="script.js"></script>
     </body>
   </html>
