--- a/sp_cart.html
+++ b/sp_cart.html
@@ -44,11 +44,11 @@
       </div>
     </header>
     <main>
-      <div class="shop-ti-big d-f ai-c jc-c bl">
+      <div class="shop-ti-big d-f ai-c jc-c bl fadeUpTrigger">
         <p class="shop-ti-big-p">SHOPPING CART  /  U-cafe</p>
       </div>
       <div class="inner">
-        <div class="cart_a">
+        <div class="cart_a fadeUpTrigger">
           <div class="cart_b">
             <ul class="d-f">
               <li>料金</li>
@@ -72,13 +72,13 @@
           <!-- /.cart_item -->
           <div class="cart_atr d-f js-sb">
 
-            <div class="cart_k">
+            <div class="cart_k mt_50">
               <p class="cart_f">＊ご要望 / ご贈答用にお熨斗をご希望のかたはこちらへご記入ください。</p>
               <div class="cart_g"></div>
             </div>
 
             <div class="cart_j d-f fd-c ai-c">
-              <div class="cart_h d-f ai-fe js-sb">
+              <div class="cart_h d-f ai-fe js-sb mt_50">
                 <div class="cart_7"><p>お支払い金額<br>（お引渡し時）</p></div>
                 <div class="cart_8">2,000円</div>
               </div>
@@ -99,29 +99,31 @@
       </div>
       <!-- /.inner -->
     </main>
-    <div class="main_contact">
-      <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-      <p class="main_con_p">You and Me Café</p>
-        <div class="main_cons d-f jc-c">
+      <!-- footer -->
+      <div class="main_contact">
+        <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+        <p class="main_con_p fadeUpTrigger">You and Me Café</p>
+        <div class="main_cons d-f jc-c fadeUpTrigger">
           <div class="main_con_i_1"></div>
           <div class="main_con_i_2"></div>
         </div>
-        <div class="btn-5">
-        <a href="contact.html">
-          <div class="con_1">
-            <h3>Contact</h3>
-            <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-          </div>
-        </a>
+        <div class="btn-5 fadeUpTrigger">
+          <a href="contact.html">
+            <div class="con_1 fadeUpTrigger">
+              <h3>Contact</h3>
+              <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+            </div>
+          </a>
+        </div>
+        <a class="hov" href="/"><img loading="lazy" class="con_3 fadeUpTrigger" src="img/u-cafe_maki.png" alt=""></a>
+        <div class="inner">
+          <div class="con_4 fadeUpTrigger"></div>
+        </div>
       </div>
-      <a class="hov" href="/"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
-      <div class="inner">
-        <div class="con_4"></div>
-      </div>
-    </div>
-  <!-- </main> -->
-  <footer>
-    <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-  </footer>
-</body>
+    </main>
+    <footer class="fadeUpTrigger">
+      <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
