--- a/sp_ch-maccha.html
+++ b/sp_ch-maccha.html
@@ -44,11 +44,11 @@
       </div>
     </header>
     <main>
-      <div class="shop-ti-big d-f ai-c jc-c">
+      <div class="shop-ti-big d-f ai-c jc-c fadeUpTrigger">
         <p class="shop-ti-big-p">ONLINE SHOP  /  U-cafe</p>
       </div>
       <div class="inner">
-        <div class="sp-dt-main d-f js-sb">
+        <div class="sp-dt-main d-f js-sb fadeUpTrigger">
           <div class="sp-dt-sub1 d-f">
             <div class="sp-dt-sub-d1 d-f fd-c js-sb">
               <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
@@ -84,39 +84,39 @@
         <!-- /.sp-dt-sub2 -->
           </div>
       <!-- /.sp-dt-maim -->
-          <div class="btn-6">
+          <div class="btn-6 fadeUpTrigger">
             <a href="">購入する</a>
           </div>
-          <div class="btn-7">
+          <div class="btn-7 fadeUpTrigger">
             <a href="">戻る</a>
           </div>
         </div>
     <!-- /.inner -->
         <!-- footer -->
         <div class="main_contact">
-          <img loading="lazy" class="main_con_i" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-          <p class="main_con_p">You and Me Café</p>
-          <div class="main_cons d-f jc-c">
+          <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+          <p class="main_con_p fadeUpTrigger">You and Me Café</p>
+          <div class="main_cons d-f jc-c fadeUpTrigger">
             <div class="main_con_i_1"></div>
             <div class="main_con_i_2"></div>
           </div>
-          <div class="clear"></div>
-          <div class="btn-5">
+          <div class="btn-5 fadeUpTrigger">
             <a href="contact.html">
-              <div class="con_1">
+              <div class="con_1 fadeUpTrigger">
                 <h3>Contact</h3>
                 <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
               </div>
             </a>
           </div>
-          <a class="hov" href="/"><img loading="lazy" class="con_3" src="img/u-cafe_maki.png" alt=""></a>
+          <a class="hov" href="/"><img loading="lazy" class="con_3 fadeUpTrigger" src="img/u-cafe_maki.png" alt=""></a>
           <div class="inner">
-            <div class="con_4"></div>
+            <div class="con_4 fadeUpTrigger"></div>
           </div>
         </div>
-      <!-- </main> -->
-      <footer>
+      </main>
+      <footer class="fadeUpTrigger">
         <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
       </footer>
+      <script src="script.js"></script>
     </body>
   </html>
