注文拡大画面完成
次からPHP

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <img  src="img/kari/coffee.jpg" alt="">
           <img  src="img/kari/maccha.jpg" alt="">
         </div>
-        <div class="btn-4 fadeUpTrigger"><a href="#">VIEW MORE</a></div>
+        <div class="btn-4 fadeUpTrigger"><a href="photo.html">VIEW MORE</a></div>
       </div>
     </div>
   </div>
@@ -104,7 +104,7 @@
             <img  src="img/kari/cookie.jpg" alt="クッキー" class="fadeUpTrigger">
             <div id="onl_pp" class="fadeUpTrigger">
               <p>U-cafe特製のチーズケーキや、<br>ギフトクッキーをお作りします。</p>
-              <div class="btn-3 fadeUpTrigger"><a href="#">詳細をみる</a></div>
+              <div class="btn-3 fadeUpTrigger"><a href="shop.html">詳細をみる</a></div>
             </div>
           </div>
         </div>
