--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
           <div class="sp-item-d d-f jc-sb">
 
             <article class="gallery">
-              <a class="hov d-b" href="#">
+              <a class="hov d-b" href="sp_ch-plane.html">
                 <figure class="fadeUpTrigger">
                   <img loading="lazy" src="img/kari/cake3.jpg" alt="プレーンチーズケーキ">
                 </figure>
@@ -67,7 +67,7 @@
             </article>
 
             <article class="gallery">
-              <a class="hov d-b" href="#">
+              <a class="hov d-b" href="sp_ch-maccha.html">
                 <figure class="fadeUpTrigger">
                   <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
                 </figure>
@@ -87,7 +87,7 @@
 
           <div class="sp-item-d d-f jc-sb">
             <article class="gallery">
-              <a class="hov d-b" href="#">
+              <a class="hov d-b" href="sp_cookie.html">
                 <figure class="fadeUpTrigger">
                   <img loading="lazy" src="img/kari/cake3.jpg" alt="抹茶">
                 </figure>
