--- a/sp_ch-maccha.html
+++ b/sp_ch-maccha.html
@@ -5,7 +5,7 @@
   <meta name="keyword" content="u-cafe,熊本カフェ,熊本パフェ">
 	<meta name="description" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
-  <title>抹茶-チーズケーキ | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
+  <title>プレーン-チーズケーキ | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
   <!-- favicon用 -->
   <link rel="shortcut icon" href="favicon/icon.ico">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jquery.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
@@ -48,19 +49,21 @@
         <p class="shop-ti-big-p">ONLINE SHOP  /  U-cafe</p>
       </div>
       <div class="inner">
-        <div class="sp-dt-main d-f js-sb fadeUpTrigger">
-          <div class="sp-dt-sub1 d-f">
-            <div class="sp-dt-sub-d1 d-f fd-c js-sb">
-              <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
-              <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
-              <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
-            </div>
-            <div class="sp-dt-sub-d2">
-              <!-- 拡大する写真が入る -->
-            </div>
+        <div class="sp-dt-main d-f js-sb">
+          <div class="sp-dt-sub1 fadeUpTrigger">
+            <ul class="gallery2">
+              <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
+            </ul>
+            <ul class="choice-btn">
+              <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
+            </ul>
           </div>
           <!-- /.sp-dt-sub1 -->
-          <div class="sp-dt-sub2 d ta-l">
+          <div class="sp-dt-sub2 d ta-l fadeUpTrigger">
             <p class="sp-dt-name ta-c">CHEESECAKE -MACCHA-</p>
             <p class="sp-dt-name2 ta-c">チーズケーキ -抹茶-</p>
             <div class="dt-price">1500円（税込み）</div>
@@ -80,43 +83,44 @@
               </div>
             </div>
             <div class="dt-text"><p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p></div>
-            </div>
-        <!-- /.sp-dt-sub2 -->
           </div>
-      <!-- /.sp-dt-maim -->
-          <div class="btn-6 fadeUpTrigger">
-            <a href="">購入する</a>
-          </div>
-          <div class="btn-7 fadeUpTrigger">
-            <a href="">戻る</a>
-          </div>
+          <!-- /.sp-dt-sub2 -->
         </div>
-    <!-- /.inner -->
+          <!-- /.sp-dt-maim -->
+        <div class="btn-6 fadeUpTrigger">
+          <a href="">購入する</a>
+        </div>
+        <div class="btn-7 fadeUpTrigger">
+          <a href="">戻る</a>
+        </div>
+      </div>
+      <!-- /.inner -->
         <!-- footer -->
-        <div class="main_contact">
-          <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
-          <p class="main_con_p fadeUpTrigger">You and Me Café</p>
-          <div class="main_cons d-f jc-c fadeUpTrigger">
-            <div class="main_con_i_1"></div>
-            <div class="main_con_i_2"></div>
-          </div>
-          <div class="btn-5 fadeUpTrigger">
-            <a href="contact.html">
-              <div class="con_1 fadeUpTrigger">
-                <h3>Contact</h3>
-                <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
-              </div>
-            </a>
-          </div>
-          <a class="hov" href="/"><img loading="lazy" class="con_3 fadeUpTrigger" src="img/u-cafe_maki.png" alt=""></a>
-          <div class="inner">
-            <div class="con_4 fadeUpTrigger"></div>
-          </div>
+      <div class="main_contact">
+        <img loading="lazy" class="main_con_i fadeUpTrigger" src="img/u-cafe-logo_black.png" alt="ロゴ黒">
+        <p class="main_con_p fadeUpTrigger">You and Me Café</p>
+        <div class="main_cons d-f jc-c fadeUpTrigger">
+          <div class="main_con_i_1"></div>
+          <div class="main_con_i_2"></div>
         </div>
-      </main>
-      <footer class="fadeUpTrigger">
-        <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
-      </footer>
-      <script src="script.js"></script>
-    </body>
-  </html>
+        <div class="btn-5 fadeUpTrigger">
+          <a href="contact.html">
+            <div class="con_1 fadeUpTrigger">
+              <h3>Contact</h3>
+              <p class="con_2">U-cafeへのお問い合わせはこちらから</p>
+            </div>
+          </a>
+        </div>
+        <a class="hov" href="/"><img loading="lazy" class="con_3 fadeUpTrigger" src="img/u-cafe_maki.png" alt=""></a>
+        <div class="inner">
+          <div class="con_4 fadeUpTrigger"></div>
+        </div>
+      </div>
+    </main>
+    <footer class="fadeUpTrigger">
+      <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
