--- a/sp_ch-plane.html
+++ b/sp_ch-plane.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/preset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jquery.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
@@ -49,15 +50,17 @@
       </div>
       <div class="inner">
         <div class="sp-dt-main d-f js-sb">
-          <div class="sp-dt-sub1 d-f fadeUpTrigger">
-            <div class="sp-dt-sub-d1 d-f fd-c js-sb">
-              <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
-              <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
-              <img src="img/kari/cake1.jpg" alt="チーズケーキの写真">
-            </div>
-            <div class="sp-dt-sub-d2">
-              <!-- 拡大する写真が入る -->
-            </div>
+          <div class="sp-dt-sub1 fadeUpTrigger">
+            <ul class="gallery2">
+              <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
+            </ul>
+            <ul class="choice-btn">
+              <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
+              <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
+            </ul>
           </div>
           <!-- /.sp-dt-sub1 -->
           <div class="sp-dt-sub2 d ta-l fadeUpTrigger">
@@ -117,6 +120,7 @@
     <footer class="fadeUpTrigger">
       <small>Copyright &copy Sheepontaneous,All rights reserved.</small>
     </footer>
-      <script src="script.js"></script>
-    </body>
-  </html>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
