--- a/sp_cookie.html
+++ b/sp_cookie.html
@@ -72,7 +72,7 @@
             <div class="dt-size">
               <p>small</p>
             </div>
-            <div class="dt-size">
+            <div class="dt-size2">
               <p>large</p>
             </div>
           </div>
