今からサイズボタンの実装

--- a/sp_ch-maccha.html
+++ b/sp_ch-maccha.html
@@ -5,7 +5,7 @@
   <meta name="keyword" content="u-cafe,熊本カフェ,熊本パフェ">
 	<meta name="description" content="あなたとわたしのカフェ。U-cafe。山小屋をイメージした木のぬくもりが温かい空間で、元パティシエがつくる洗練された料理をあなたに。">
 	<meta name="robots" content="noindex,nofollow">
-  <title>プレーン-チーズケーキ | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
+  <title>抹茶-チーズケーキ | shop -オンラインショップ- | U-cafe 【公式】あなたとわたしのカフェ。</title>
   <!-- favicon用 -->
   <link rel="shortcut icon" href="favicon/icon.ico">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
@@ -49,47 +49,52 @@
         <p class="shop-ti-big-p">ONLINE SHOP  /  U-cafe</p>
       </div>
       <div class="inner">
-        <div class="sp-dt-main d-f js-sb">
-          <div class="sp-dt-sub1 fadeUpTrigger">
-            <ul class="gallery2">
-              <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
-              <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
-              <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
-            </ul>
-            <ul class="choice-btn">
-              <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
-              <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
-              <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
-            </ul>
-          </div>
-          <!-- /.sp-dt-sub1 -->
-          <div class="sp-dt-sub2 d ta-l fadeUpTrigger">
-            <p class="sp-dt-name ta-c">CHEESECAKE -MACCHA-</p>
-            <p class="sp-dt-name2 ta-c">チーズケーキ -抹茶-</p>
-            <div class="dt-price">1500円（税込み）</div>
-            <div class="dt-size d-f">
-              <div class="dt-size-ti"><p>SIZE</p></div>
-              <div class="dt-size-po"><p>\ 一番人気 /</p></div>
+
+        <!-- form -->
+        <form method="POST" action="sp_cart.php">
+          <div class="sp-dt-main d-f js-sb">
+            <div class="sp-dt-sub1 fadeUpTrigger">
+              <ul class="gallery2">
+                <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
+                <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
+                <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
+              </ul>
+              <ul class="choice-btn">
+                <li><img src="img/kari/cake3-1.jpg" alt="チーズケーキの写真"></li>
+                <li><img src="img/kari/cake3-2.jpg" alt="チーズケーキの写真"></li>
+                <li><img src="img/kari/cake3-3.jpg" alt="チーズケーキの写真"></li>
+              </ul>
             </div>
-            <div class="dt-size-dt d-f">
-              <div class="dt-size">
-                <p>12cm</p>
+            <!-- /.sp-dt-sub1 -->
+            <div class="sp-dt-sub2 d ta-l fadeUpTrigger">
+              <p class="sp-dt-name ta-c">CHEESECAKE -MACCHA-</p>
+              <p class="sp-dt-name2 ta-c">チーズケーキ -抹茶-</p>
+              <div class="dt-price">1500円（税込み）</div>
+              <div class="dt-size d-f">
+                <div class="dt-size-ti"><p>SIZE</p></div>
+                <div class="dt-size-po"><p>\ 一番人気 /</p></div>
               </div>
-              <div class="dt-size">
-                <p>15cm</p>
+              <div class="dt-size-dt d-f">
+                <div class="dt-size">
+                  <p>12cm</p>
+                </div>
+                <div class="dt-size">
+                  <p>15cm</p>
+                </div>
+                <div class="dt-size">
+                  <p>18cm</p>
+                </div>
               </div>
-              <div class="dt-size">
-                <p>18cm</p>
-              </div>
+              <div class="dt-text"><p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p></div>
             </div>
-            <div class="dt-text"><p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p></div>
+            <!-- /.sp-dt-sub2 -->
           </div>
-          <!-- /.sp-dt-sub2 -->
-        </div>
-          <!-- /.sp-dt-maim -->
-        <div class="btn-6 fadeUpTrigger">
-          <a href="">購入する</a>
-        </div>
+            <!-- /.sp-dt-maim -->
+          <div class="btn-6 fadeUpTrigger">
+            <a href="">購入する</a>
+          </div>
+        </form>
+
         <div class="btn-7 fadeUpTrigger">
           <a href="">戻る</a>
         </div>
