先生に修正してもらった
spの個別の画面

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -37,7 +38,7 @@
                 <li><a class="hov_nav_w" href="photo.html">PHOTO</a></li>
                 <li><a class="hov_nav_w" href="shop.html">ONLINE SHOP</a></li>
                 <li><a class="hov_nav_w" href="#access">ACCESS</a></li>
-                <li><a class="hov_nav_w" href="contact.html">CONTACT</a></li>
+                <li><a class="hov_nav_w" href="contact.php">CONTACT</a></li>
                 <li><a href="https://www.instagram.com/u_cafe_201710/?hl=ja" target="_blank"><img src="img/glyph-logo_white.png" alt="白"><img class="insta_hov" src="img/glyph-logo_May2016.png" alt="黒"></a></li>
               </ul>
             </div>
