お問い合わせフォームが上手く行かない

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
         </div>
         <div class="fadeUpTrigger" id="aboutus_b">
           <p id="ap">あなたと<br>わたしの<br>カフェ。</p>
-          <p class="fadeUpTrigger">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキ</p>
+          <p class="fadeUpTrigger ta-l">
+          「料理も、デザートも、コーヒーも美味しいカフェってどこかな。」<br>
+          「ないなら自分でつくっちゃえ！」<br>
+          　元パティシエだった僕が、こだわりをつめこんだカフェを作りました。<br>
+          　旬のものを、旬のときに。<br>
+          　心と体が喜ぶカフェを目指しています。
+          </p>
         </div>
       </div>
     </div>
