shopping 詳細ページ
枠調整

--- a/sp_ch-plane.html
+++ b/sp_ch-plane.html
@@ -116,7 +116,7 @@
         </form>
 
         <div class="btn-7 fadeUpTrigger">
-          <a href="">戻る</a>
+          <a href="shop.html">戻る</a>
         </div>
       </div>
       <!-- /.inner -->
